--- a/startup.ipynb
+++ b/startup.ipynb
@@ -831,10 +831,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "数据已成功保存为CSV文件：tw0050.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import twstock\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 设定目标股票代码和获取数据的时间范围\n",
+    "target_stock = '0050'\n",
+    "stock = twstock.Stock(target_stock)\n",
+    "target_price = stock.fetch_from(2020, 5)  # 从2020年5月开始获取数据\n",
+    "\n",
+    "# 将数据转换为DataFrame，仅包含日期和收盘价\n",
+    "data = []\n",
+    "for price in target_price:\n",
+    "    data.append([price.date.strftime('%Y-%m-%d'), price.close])  # 只包含日期和收盘价\n",
+    "\n",
+    "df = pd.DataFrame(data, columns=['Date', 'Close'])\n",
+    "\n",
+    "# 保存为CSV文件\n",
+    "f_name = 'tw'+target_stock+'.csv'\n",
+    "df.to_csv(f_name, index=False, encoding='utf-8')\n",
+    "\n",
+    "print(\"数据已成功保存为CSV文件：\"+f_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import twstock\n",
+    "import pandas as pd\n",
+    "\n",
+    "def fetch_and_save_stock_data(stock_code):\n",
+    "    # 获取股票数据\n",
+    "    stock = twstock.Stock(stock_code)\n",
+    "    target_price = stock.fetch_from(2020, 5)  # 从2020年5月开始获取数据\n",
+    "    \n",
+    "    # 将数据转换为DataFrame\n",
+    "    data = []\n",
+    "    for price in target_price:\n",
+    "        data.append([price.date.strftime('%Y-%m-%d'), price.close])\n",
+    "    \n",
+    "    df = pd.DataFrame(data, columns=['Date', 'Close'])\n",
+    "    \n",
+    "    # 保存为CSV文件\n",
+    "    file_name = 'tw' + stock_code + '.csv'\n",
+    "    df.to_csv(file_name, index=False, encoding='utf-8')\n",
+    "    \n",
+    "    print(\"数据已成功保存为CSV文件：\" + file_name)\n",
+    "\n",
+    "stock_codes = ['0050', '006208']\n",
+    "\n",
+    "for code in stock_codes:\n",
+    "    fetch_and_save_stock_data(code)\n",
+    "\n",
+    "# 读取两个CSV文件\n",
+    "df1 = pd.read_csv('tw0050.csv')\n",
+    "df2 = pd.read_csv('tw006208.csv')\n",
+    "\n",
+    "# 合并两个DataFrame\n",
+    "merged_df = pd.concat([df1, df2])\n",
+    "# 保存合并后的DataFrame为CSV文件\n",
+    "merged_df.to_csv('merged_stock_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "数据已成功合并并保存为CSV文件：merged_stock_data.csv\n",
+      "\n",
+      "合并后的数据：\n",
+      "              0050  006208\n",
+      "2020-05-04   83.00   47.70\n",
+      "2020-05-05   83.40   47.78\n",
+      "2020-05-06   83.50   47.74\n",
+      "2020-05-07   83.85   48.04\n",
+      "2020-05-08   84.35   48.29\n",
+      "...            ...     ...\n",
+      "2024-05-14  164.40   96.15\n",
+      "2024-05-15  166.65   97.50\n",
+      "2024-05-16  167.45   98.10\n",
+      "2024-05-17  167.25   97.80\n",
+      "2024-05-20  167.20   97.65\n",
+      "\n",
+      "[987 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import twstock\n",
+    "import pandas as pd\n",
+    "\n",
+    "def fetch_stock_data(stock_code):\n",
+    "    # 获取股票数据\n",
+    "    stock = twstock.Stock(stock_code)\n",
+    "    target_price = stock.fetch_from(2020, 5)  # 从2020年5月开始获取数据\n",
+    "    \n",
+    "    # 将数据转换为DataFrame\n",
+    "    data = {}\n",
+    "    for price in target_price:\n",
+    "        data[price.date.strftime('%Y-%m-%d')] = price.close\n",
+    "    \n",
+    "    return pd.Series(data, name=stock_code)\n",
+    "\n",
+    "def merge_and_save_csv(stock_codes, output_file):\n",
+    "    # 合并所有股票数据为一个DataFrame\n",
+    "    dfs = [fetch_stock_data(code) for code in stock_codes]\n",
+    "    merged_df = pd.concat(dfs, axis=1)\n",
+    "    \n",
+    "    # 保存合并后的DataFrame为CSV文件\n",
+    "    merged_df.to_csv(output_file)\n",
+    "    \n",
+    "    print(\"数据已成功合并并保存为CSV文件：\" + output_file)\n",
+    "    print(\"\\n合并后的数据：\")\n",
+    "    print(merged_df)\n",
+    "\n",
+    "# 举例：获取'0050'和'006208'股票的数据并将其合并为一个CSV文件\n",
+    "stock_codes = ['0050', '006208']\n",
+    "output_file = 'merged_stock_data.csv'\n",
+    "merge_and_save_csv(stock_codes, output_file)"
+   ]
   }
  ],
  "metadata": {
